# UniBMark

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  report.xml  requirements.txt  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/issue_template/: bug_report.md
.github/workflows/: automation_pipeline.yml  jira_bug_report.yml
UniBookMark/: config.py  jira_api.py  main.py  requirements.txt  test_runner.py
UniBookMark/src/: __init__.py  app.py  config.py  pyproject.toml  requirements.txt
UniBookMark/src/controllers/: bookmark_controller.py
UniBookMark/src/infrastructure/: config.py  jira_api.py
UniBookMark/src/models/: bookmark.py  caminhos.py
UniBookMark/src/presentation/: main.py
UniBookMark/tests/: test_runner.py
UniBookMark/tests/models/: test_caminhos.py
jira_bug_tracker/: config.py  jira_api.py
jira_bug_tracker/.github/workflows/: jira_bug_report.yml
src/: app.py
src/config/: building.py
src/controllers/: bookmark_controller.py
src/models/: bookmark.py  caminhos.py  teste.py
tests/models/: test_caminhos.py
