[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unibmark"
version = "0.1.0"
description = "Sistema de gerenciamento de bookmarks universitários"
authors = [
    {name = "Pedro Dias", email = "seu@email.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "flask>=2.0",
    "sqlalchemy>=1.4",
    # Adicione outras dependências principais aqui
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
    "pylint>=2.0",
    "faker>=15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--junitxml=report.xml",
    "--verbose",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
known_first_party = ["unibmark"]

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"
max-complexity = 18
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "migrations",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
disallow_incomplete_defs = true

[tool.pylint.MASTER]
load-plugins = "pylint_flask"

[tool.pylint.BASIC]
good-names = ["app", "db", "api"]

[tool.pylint.FORMAT]
max-line-length = 100

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "import-error",
]